src/test/ui/self/arbitrary_self_types_pin_lifetime_impl_trait-async.nll.stderr
error: lifetime may not live long enough
  --> $DIR/arbitrary_self_types_pin_lifetime_impl_trait-async.rs:8:48
   |
LL |     async fn f(self: Pin<&Self>) -> impl Clone { self }
   |                          -                     ^^^^^^^^ returning this value requires that `'1` must outlive `'static`
   |                          |
   |                          let's call the lifetime of this reference `'1`
   |
help: to allow this `impl Trait` to capture borrowed data with lifetime `'1`, add `'_` as a constraint
   |
LL |     async fn f(self: Pin<&Self>) -> impl Clone + '_ { self }
   |                                     ^^^^^^^^^^^^^^^

error: aborting due to previous error

